# sonnenmodule3

./: CMakeLists.txt  debug.conf  mqtt.py  mqtt2.py  prj.conf
boards/sonnen/: Kconfig.batteriemodule3  Kconfig.defconfig  batteriemodule3-pinctrl.dtsi  batteriemodule3.dts  batteriemodule3.yaml  batteriemodule3_defconfig  board.yml
boards/sonnen/support/: openocd.cfg
include/: can.h  elapsedmillis.h  gpio.h  master.h  module_data.h  pl455.h  pl455_config.h  pylon_hv.h  slave.h
src/: can.c  gpio.cpp  main.cpp  master.cpp  module_data.cpp  pl455.cpp  slave.cpp
zephyr/: module.yml
